# local-media-browser

./: .env.example  .gitignore  README.md  docker-compose.yml
server/: .env.example  Cargo.toml  Dockerfile
server/src/: config.rs  http_utils.rs  indexer.rs  main.rs  models.rs  paths.rs  responses.rs  sorting.rs  state.rs  thumbnails.rs
server/src/frontend/: mod.rs  style.rs
server/src/handlers/: api.rs  assets.rs  mod.rs
web/: .env.example  Dockerfile  package-lock.json  package.json  vite.config.ts
web/src/: app.d.ts
web/src/lib/: api.ts  types.ts
web/src/lib/components/: GalleryGrid.svelte  VideoPlayer.svelte
web/src/routes/: +page.server.ts  +page.svelte
web/src/routes/[...path]/: +page.server.ts  +page.svelte
